# particle

./: .gitignore  Cargo.toml  README.md
.criterion/DFA String Regex/base/: estimates.json  sample.json  tukey.json
.criterion/DFA String Regex/change/: estimates.json
.criterion/DFA String Regex/new/: estimates.json  sample.json  tukey.json
.criterion/DFA to NFA/base/: estimates.json  sample.json  tukey.json
.criterion/DFA to NFA/change/: estimates.json
.criterion/DFA to NFA/new/: estimates.json  sample.json  tukey.json
.criterion/FxHashSet using iter/base/: estimates.json  sample.json  tukey.json
.criterion/FxHashSet using iter/change/: estimates.json
.criterion/FxHashSet using iter/new/: estimates.json  sample.json  tukey.json
.criterion/FxHashSet/base/: estimates.json  sample.json  tukey.json
.criterion/FxHashSet/change/: estimates.json
.criterion/FxHashSet/new/: estimates.json  sample.json  tukey.json
.criterion/HashSet/base/: estimates.json  sample.json  tukey.json
.criterion/HashSet/change/: estimates.json
.criterion/HashSet/new/: estimates.json  sample.json  tukey.json
.criterion/NFA Not/new/: estimates.json  sample.json
.criterion/NFA String Regex/base/: estimates.json  sample.json  tukey.json
.criterion/NFA String Regex/change/: estimates.json
.criterion/NFA String Regex/new/: estimates.json  sample.json  tukey.json
benches/: benchmark.rs  large_json.json
examples/: number_dfa.dot  number_dfa_min.dot  string_dfa_large.dot  string_dfa_min.dot  string_nfa.dot
src/: automatons.rs  lexer.rs  lib.rs  main.rs  regex.rs  span.rs
(+19 files in other folders)
